--- a/stable-diffusion-webui-master/requirements_versions.txt
+++ b/stable-diffusion-webui-master/requirements_versions.txt
@@ -1,10 +1,10 @@
-blendmodes==2022
+blendmodes
 transformers==4.25.1
 accelerate==0.12.0
 basicsr==1.4.2
 gfpgan==1.3.8
 gradio==3.16.2
-numpy==1.23.3
+numpy
 Pillow==9.4.0
 realesrgan==0.3.0
 torch
